welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	faireV() {
		avance();
		baisseBrosse();
		leveBrosse();
		avance();
		gauche();
		avance();
		baisseBrosse();
		leveBrosse();
		recule();
		droite();
		avance();
		baisseBrosse()
		leveBrosse();
		avance();
		gauche();
	}
	for(a<-1 to 4) {
		faireV();
	}
}
